# mahjong-py

./: .gitignore  README.md  pyproject.toml
docs/: expected-score-optimization.md
examples/: melds_open.json
src/mahjong_py/: __init__.py  cli.py  constants.py  expected_score_calculator.py  expected_score_numba.py  hand_separator.py  hashing.py  mpsz.py  necessary.py  score_calculator.py  score_constants.py  score_table.py  score_types.py  server.py  shanten.py  table_generator_fast.py  tables.py  unnecessary.py  utils.py
src/mahjong_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mahjong_py/gui/: __init__.py  __main__.py  helpers.py  layout.py  result_panel.py
tests/: test_expected_score.py  test_expected_score_numba.py  test_mpsz.py  test_necessary_unnecessary.py  test_score_normal_yaku.py  test_score_yakuman.py  test_shanten.py
